Fixed a problem where the field names weren't being aligned properly when the locale is set to Hebrew (locale=he).
This fix mirrors what happens when the locale is set to English, or some other left-to-right language.

--- a/src/main/webapp/public/resources/style.css
+++ b/src/main/webapp/public/resources/style.css
@@ -120,6 +120,10 @@ table td.key {
     width: 36%;
 }
 
+html[dir="rtl"] table td.key {
+    text-align: left;
+}
+
 .health-body {
     padding-top:5px;
     padding-bottom:10px;
